--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-3.40MB/s(Youtube:不良林), server: 23.94.120.19, port: 28554, type: vmess, uuid: 4a4c96c5-7b8b-4612-c715-6b91a9c34d07, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-191.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇩🇪 德国-2.70MB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-2.62MB/s(Youtube:不良林), server: 134.195.198.95, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-462.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-2.63MB/s(Youtube:不良林), server: 134.195.198.95, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: 172.99.188.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-559.9KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-2.97MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-2.91MB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-2.41MB/s(Youtube:不良林), server: 134.195.196.128, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-4.58MB/s(Youtube:不良林), server: 140.83.57.80, port: 49840, type: vmess, uuid: 2969ad1b-9787-4927-94e6-22f597618de0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.37MB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇦 加拿大-2.82MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-2.98MB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇦 加拿大-2.84MB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-2.89MB/s(Youtube:不良林), server: 134.195.196.128, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-462.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-559.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.89MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-3.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-462.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-559.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.89MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-462.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-559.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.89MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-3.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-462.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-559.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.89MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-462.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-559.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.89MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-3.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-462.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-559.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.89MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-3.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-462.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-559.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.89MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
