--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.62MB/s(Youtube:不良林), server: 134.195.198.95, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-462.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇳🇱 荷兰-3.06MB/s(Youtube:不良林), server: bai-piao-wang-zhe.iplc.nl.884899.cf, port: 443, type: trojan, password: e49f9132-4f1c-4a11-998f-0b90697254e6, sni: bai-piao-wang-zhe.iplc.nl.884899.cf, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.63MB/s(Youtube:不良林), server: 134.195.198.95, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: 172.99.188.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-4.58MB/s(Youtube:不良林), server: 140.83.57.80, port: 49840, type: vmess, uuid: 2969ad1b-9787-4927-94e6-22f597618de0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.13MB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.47MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 14.152.92.81, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇦 加拿大-2.37MB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇨🇦 加拿大-2.82MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇦 加拿大-2.98MB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-462.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-462.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-462.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-462.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-462.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-462.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-462.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
