--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-1.94MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-460.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-2.63MB/s(Youtube:不良林), server: 134.195.198.95, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-2.83MB/s(Youtube:不良林), server: 134.195.198.95, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 129.150.51.215, port: 30839, type: vmess, uuid: 19bf4866-54ce-4fc9-8903-db7e160c5b81, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 未知国家-571.2KB/s(Youtube:不良林), server: vfly6.xyz, port: 443, type: vmess, uuid: f3b6fd11-4444-4efa-b19a-13ad22d0a782, alterId: 60, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly6.xyz}}
+  - {name: 🇨🇦 加拿大-1.89MB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-2.32MB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.33MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-2.91MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-2.85MB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇦 加拿大-2.37MB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇦 加拿大-2.82MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇦 加拿大-2.98MB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇦 加拿大-2.84MB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-2.89MB/s(Youtube:不良林), server: 134.195.196.128, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇦 加拿大-2.48MB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 未知国家-571.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 未知国家-571.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 未知国家-571.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 未知国家-571.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 未知国家-571.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 未知国家-571.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 未知国家-571.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
