--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇸🇬 新加坡-2.50MB/s(Youtube:不良林), server: 168.138.173.205, port: 22503, type: vmess, uuid: 62e99d02-7105-443d-eeff-2cfeb4a4fe11, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 129.150.51.215, port: 30839, type: vmess, uuid: 19bf4866-54ce-4fc9-8903-db7e160c5b81, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 未知国家-571.2KB/s(Youtube:不良林), server: vfly6.xyz, port: 443, type: vmess, uuid: f3b6fd11-4444-4efa-b19a-13ad22d0a782, alterId: 60, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly6.xyz}}
-  - {name: 🇨🇦 加拿大-1.89MB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-2.32MB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.33MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-989.4KB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.27MB/s(Youtube:不良林), server: 14.152.92.82, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇭🇰 香港-536.6KB/s(Youtube:不良林), server: 43.129.175.128, port: 20010, type: vmess, uuid: 022fef82-1b48-440b-a7e0-a47dc6bde5b4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.91MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-2.85MB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇦 加拿大-2.37MB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 未知国家-571.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-989.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 未知国家-571.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-989.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 未知国家-571.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-989.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 未知国家-571.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-989.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 未知国家-571.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-989.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 未知国家-571.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-989.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 未知国家-571.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-989.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
